# dlef

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  benchmark_bubble_sort.cpp
cmake/: CompilerWarnings.cmake  ProjectDependencies.cmake  StandardProjectSettings.cmake
examples/: CMakeLists.txt  bubble_sort.cpp
include/: bubble_sort.hpp  my_sort.hpp  sequence_generation.hpp
src/: CMakeLists.txt  bubble_sort.cpp
tests/: CMakeLists.txt  test_bubble_sort.cpp
